se finalizaron los ejercicios palicandole bem y documentado

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <script src="app.js"></script>
+    <main class="">
+        <div class="main__caja">
+            <p class="main__caja-texto">
+                Lorem ipsum
+            </p>
+        </div>
+    </main>
+    <!-- <script src="app.js"></script> -->
+    <!-- <script src="app2.js"></script> -->
+    <!-- <script src="app3.js"></script> -->
+    <!-- <script src="app4.js"></script> -->
+    <!-- <script src="app5.js"></script>  -->
+    <!-- <script src="app6.js"></script> -->
+    <!-- <script src="app7.js"></script> -->
 </body>
 </html>
